# DZ-Account-transactions

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
data/: operations.json
functions/: functions.py
tests/: output_test.json  test_functions.py  test_text_to_json.json
