[tool.poetry]
name = "account-transactions"
version = "0.1.0"
description = ""
authors = ["Dmitry <kipriyn.dima1997@gmail.com>"]
readme = "README.md"
packages = [{include = "account_transactions"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
